[tool.poetry]
name = "fitbit-graphs"
version = "0.1.0"
description = "Various graphs for Fitbit data"
authors = ["Joey Wilhelm <tarkatronic@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.6.1"
seaborn = "^0.10.1"
numpy = "^1.19.0"
matplotlib = "^3.2.2"
pandas = "^1.0.5"
statsmodels = "^0.11.1"

[tool.poetry.dev-dependencies]
mypy = "^0.782"
black = {version = "^19.10b0", allow-prereleases = true}

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
